Adding back glow and 3 new track from ORB2

--- a/css/style.css
+++ b/css/style.css
@@ -115,5 +115,5 @@ html, body {
 
 #content .glow {
   z-index: 1;
-  /*background: url(../images/Logo_glow_small.svg) center center repeat-x;*/
+  background: url(../images/Logo_glow_small.svg) center center repeat-x;
 }
